# v0.1.0 Branch initialization
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yabai"
version = "0.1.0"
authors = [
  { name="Luis Pedro Vicente Matilla", email="luis.p.vicente@gmail.com" },
]
description = "YABAI (Yet Another Bühlmann Algorithm Implementation) is a Python package to plan scuba dives using the Bühlmann ZH-L16(A, B or C) models"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0-only",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.26.4",
    "matplotlib >= 3.8.3",
]

[project.urls]
Homepage = "https://github.com/lpvic/yabai"

[tool.setuptools.packages.find]
where = ["src"]
include = []
exclude = []
namespaces = false
